# smaller_edits

./: .gitignore  README.md  files.txt
python/: pyproject.toml
python/src/smaller_edits/: __init__.py  api.py  context.py  edit_tool.py  errors.py  fileio.py  hashing.py  models.py  read_tool.py
python/test/: harness.py  helpers.py  run_harness_test.sh  test_agno_harness.py  test_edit_tool.py  test_failures.py  test_harness_functional.py  test_hashing.py  test_read_tool.py  test_state_reconciliation.py  test_thread_safety.py
spec/: smaller-edits-spec.md
test/fixtures/: blank-lines.txt  duplicate-content.txt  import-block.txt  repeated-lines.txt
test/vectors/: edit-vectors.json  harness-vectors.json  index.json  read-vectors.json
