[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smaller-edits"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
agno = ["agno", "openai"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
